--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Score Keeper</string>
+    <string name="team_a">TEAM A</string>
+    <string name="team_b">TEAM B</string>
 </resources>
