--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Score Keeper</string>
     <string name="team_a">TEAM A</string>
     <string name="team_b">TEAM B</string>
+    <string name="_3_points">+3 POINTS</string>
+    <string name="_2_points">+2 POINTS</string>
+    <string name="free_throw">FREE THROW</string>
 </resources>
